--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>불씨 MBTI 테스트</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,6 +22,7 @@
             <img class="titleImage" src="img/titleImage.png"></div>
         <h1 class="mt-5 text-center">나의 MBTI는?</h1>
         <button type="button" class="btn mt-5" onclick='start();'">테스트 시작하기</button>
+        <h4 class="mt-5 text-center">made by 선재 & 현규</h4>
     </article>
     <article class="question">
         <div class="progress mt-5">
@@ -36,16 +37,17 @@
         <img id="img" class="rounded-circle mt-5" src="lion.jpg" alt="animal">
         <h2 id="animal" class="text-center mt-5">동물이름</h2>
         <h3 id="explain" class="text-center mt-5">설명</h3>
-        <h2 id="mbti-friend" class="text-center mt-5">INFP 인 부원</h2>
-        <h3 id="mbti-friend-name" class="text-center mt-5">김선재 김선재 김선재</h3>
+        <h3 id="mbti-friend" class="text-center mt-5">INFP 인 부원</h3>
+        <h4 id="mbti-friend-name" class="">김선재 김선재 김선재</h4>
+        <div id="no-mean"> </div>
         <!-- Go to www.addthis.com/dashboard to customize your tools --> <div class="share addthis_inline_share_toolbox"></div>
     </article>
-    <article class="kakao_ad mt-5">
+    <!-- <article class="kakao_ad mt-5">
         <ins class="kakao_ad_area" style="display:none;" 
         data-ad-unit    = "DAN-uBqgWtTAOD3ZzYc2" 
         data-ad-width   = "320" 
         data-ad-height  = "100"></ins> 
-    </article>
+    </article> -->
     
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <input type="hidden" id="EI" value="0">
@@ -57,21 +59,21 @@
     <script>
         var num = 1;
         var q = {
-            1: {"title":"두근두근, 불씨 대망의 첫 부서회식!", "type":"EI", "A":"어색한 게 제일 싫어! 마이크만 쥐어주면 그 자리에서 바로 토크쇼!", "B":"먼저 말하기는 부담스러워.. 천천히 알아가고 싶어!."},
-            2: {"title":"sns조가 공개됐다! 근데 아는 사람이 한 명도 없네?", "type":"EI", "A":"오히려 좋아! 원래 이런 건 알아가는 재미지~", "B":"으악! 어떡하지.. 기대 반, 걱정 반"},
+            1: {"title":"나의 하루 계획은 다음에 가깝다.", "type":"JP", "A":" 9시~12시 수업 12시~13시 점심약속 13시~15시 팀플 15시~18시 수업 18시~20시 저녁약속", "B":"보람차게 살기!"},
+            2: {"title":"팀플 때 매번 10분씩 늦는 팀원이 있다. 근데 성격은 참 좋다.", "type":"TF", "A":"그래도 한두번도 아니고 매번 늦는 건 아니지.", "B":"뭐 그럴 수 있지~"},
             3: {"title":"sns 미션을 고른다면?", "type":"EI", "A":"좌충우돌 왁자지껄, 방탈출카페!", "B":"행궁동 카페에서 감성 한모금~"},
 
             4: {"title":"학과행사를 기획해야 할 때", "type":"SN", "A":"예전엔 어떻게 했는지 한번 찾아볼까?", "B":"이건 어때? 저건 어때? 아이디어 뱅크!"},
-            5: {"title":"민트초코오이비빔밥 먹기 vs or1, 응통1 같이 듣기 중 하나를 골라야한다면?", "type":"SN", "A":"뭐래 ㅋㅋ (다음 대화 주제로)", "B":"민트초코..오이비빔밥..?? 뭔 조합이야 상상도 안가. 근데 or1이랑 응통1이랑 같이 들으면 그냥 휴학하라는 거잖아..?"},
+            5: {"title":"응통1 수업을 같이 듣는 친구가 “ 나 너무 힘들어.. 그만 드랍할까봐” 라고 말한다면?", "type":"TF", "A":"왜? 어디가 어려운데? 어떤 부분인지 말해줘봐 한번 보게.", "B":"그치.. 나도 쉽지 않네. 그래도 좀만 더 버텨보자. 얻어가는 건 많잖아!"},
             6: {"title":"새로 부임하신 교수님이 개설하신 강좌가 있다. 들리는 소문에 의하면 학점 천사시라고…", "type":"SN", "A":"그래도 혹시 몰라.. 한 학기 지켜보고 들어도 늦지 않아!", "B":"하이리스크 하이리턴이지! 자, 드가자~"},
 
-            7: {"title":"응통1 수업을 같이 듣는 친구가 “ 나 너무 힘들어.. 그만 드랍할까봐” 라고 말한다면?", "type":"TF", "A":"왜? 어디가 어려운데? 어떤 부분인지 말해줘봐 한번 보게.", "B":"그치.. 나도 쉽지 않네. 그래도 좀만 더 버텨보자. 얻어가는 건 많잖아!"},
-            8: {"title":"팀플 때 매번 10분씩 늦는 팀원이 있다. 근데 성격은 참 좋다.", "type":"TF", "A":"그래도 한두번도 아니고 매번 늦는 건 아니지.", "B":"뭐 그럴 수 있지~"},
+            7: {"title":"민트초코오이비빔밥 먹기 vs or1, 응통1 같이 듣기 중 하나를 골라야한다면?", "type":"SN", "A":"뭐래 ㅋㅋ (다음 대화 주제로)", "B":"민트초코..오이비빔밥..?? 뭔 조합이야 상상도 안가. 근데 or1이랑 응통1이랑 같이 들으면 그냥 휴학하라는 거잖아..?"},
+            8: {"title":"불씨 화상회의를 하기 전,", "type":"JP", "A":"회의 시작이 6시니까 5분 전에 미리 들어가 있는다.", "B":"후다닥, 캠에 방이 더러워보이지 않게 급히 방 정리를 한다."},
             9: {"title":"학과행사를 마치고 불씨의 칭찬글이 올라왔다. 그 내용으로 뭐가 더 좋은지?", "type":"TF", "A":"어떻게 이런 걸 생각해서 기획했어요? 저도 같이 일하고 싶어요.", "B":"너무 재밌었어요! 이제야 대학생활 하는 것 같아요. 수고 많았어요 !"},
             
             10: {"title":"필요한 게 있어서 쿠팡에 접속한 당신,", "type":"JP", "A":"필요한 것만 사고 앱을 종료한다.", "B":"어? 이것도 필요할 거 같은데?"},
-            11: {"title":"나의 하루 계획은 다음에 가깝다.", "type":"JP", "A":" 9시~12시 수업 12시~13시 점심약속 13시~15시 팀플 15시~18시 수업 18시~20시 저녁약속", "B":"보람차게 살기!"},
-            12: {"title":"불씨 화상회의를 하기 전,", "type":"JP", "A":"회의 시작이 6시니까 5분 전에 미리 들어가 있는다.", "B":"후다닥, 캠에 방이 더러워보이지 않게 급히 방 정리를 한다."}
+            11: {"title":"두근두근, 불씨 대망의 첫 부서회식!", "type":"EI", "A":"어색한 게 제일 싫어! 마이크만 쥐어주면 그 자리에서 바로 토크쇼!", "B":"먼저 말하기는 부담스러워.. 천천히 알아가고 싶어!."},
+            12: {"title":"sns조가 공개됐다! 근데 아는 사람이 한 명도 없네?", "type":"EI", "A":"오히려 좋아! 원래 이런 건 알아가는 재미지~", "B":"으악! 어떡하지.. 기대 반, 걱정 반"}
         }
         var result = {
             "ISTJ":{"animal":"ISTJ – 모든 것의 출발은 계획이다.", "explain":"물건을 사면 안에 있는 사용설명서를 꼭 챙겨 읽고, 여행을 가게 되면 나서서 계획을 짜곤 하는 당신은 계획적이면서 원칙적인 사람입니다. 자신의 일이나 의견에 간섭 받는 것을 좋아하지 않는 당신은 독립적이면서도 자기 자신에 대한 책임감이 매우 깊은 사람입니다. 약속을 굉장히 중요시 여기며 즉흥적으로 무언가를 하기를 꺼려하는 당신은 변수가 많은 팀플 수업보다는 개인 과제 위주의 수업을 선호하며 단순암기시험에 강한 면모를 보입니다. 또한 현실감각이 뛰어나 지킬 수 있는 계획을 세우고 이를 반드시 수행하는 편입니다. 막중한 ‘책임감’의 무게를 아는 당신, 불씨의 일원으로 더 좋은 학과생활을 만들어가요!", "img":"img/istj.png", "mbti-friend":"ISTJ 술주정 특징", "mbti-friend-name":"귀가본능!<br>만취해도 집 잘들어감<br>갑분집"},
@@ -88,7 +90,7 @@
             "ENTP":{"animal":"ENTP - 고민보단 고!", "explain":"일단 저지르고 보는 당신은 선입견 없이 그대로를 받아들일 수 있는 개방적인 마인드의 소유자에요. 주변 환경에 따라 시시각각 자신을 변화시킬 수 있는 센스쟁이인 당신. 때론 직설적이고 솔직하게 표현하는 탓에 종종 오해를 사기도 하지만 좋아하는 사람에겐 한없이 친절한 좋은 친구랍니다. ‘재미’가 원동력인 당신, 불씨에서 재밌는 추억 함께 만들어가봐요!", "img":"img/entp.png", "mbti-friend":"ENTP 술주정 특징", "mbti-friend-name":"옆테이블한테 시비걸거나 옆테이블이랑 호형호제 잼"},
             "ESTJ":{"animal":"ESTJ – 그게 최선이에요? 확실해요?", "explain":"“야 너 일 잘한다.” “믿고 보는 OOO” “역시 OOO!” 이 문장 속 동그라미에 자연스레 자신의 이름을 대입하고 있을 당신은 ‘알잘딱깔센’ 그 자체에요. 확실한 일처리를 좋아하며 현실적이고 이성적이며 호불호가 강한 편이에요. 팀플에서 답답하게 행동하는 사람을 차마 보고만 있을 순 없어서 그 사람 몫까지 두 세배로 완벽하게 해내곤 하는 당신은 목표를 정하면 이룰 때까지 한 우물만 파는 불도저 같은 성격의 소유자입니다. 누군가 당신에게 고민 상담을 한다면 객관적인 판단을 통해 해결책을 제시하며 그닥 공감이 되지 않더라도 위로하려고 노력하는 편이에요. 약속 시간 15분 전에 미리 도착해 있을 만큼 ‘신뢰’를 소중하게 여기는 당신, 학우들에게 신뢰받고 사랑받는 불씨를 함께 만들어가요!", "img":"img/estj.png", "mbti-friend":"ESTJ 술주정 특징", "mbti-friend-name":"\"현실적으로 생각해보자 ㅇㅇ\"<br>현실직시형<br>AKA 프로찬물러"},
             "ESFJ":{"animal":"ESFJ – 사회생활 만렙", "explain":"타인을 향한 세심한 관심과 사교적인 성향으로 사람들 사이에서 인기쟁이인 당신은 타고난 분위기 메이커에요. 새로운 사람 사귀는 것도 좋아하고 같이 노는 것도 좋아해요. 강의 때 교수님의 질문에 가장 많이 호응하곤 하는 당신은 어디 가서 사회생활 잘한다는 소리를 자주 듣는 편이에요. 다른 사람에게 인정받을 때 기분이 좋아지곤 하는 당신은 거절에는 다소 약한 내성을 보이는 편이며 아직 일어나지 않은 일을 미리 걱정하곤 해요. 주변 사람들을 정말 잘 챙기며 뛰어난 ‘공감능력’을 보유한 당신, 불씨에서 함께 재밌는 추억 만들어가요!", "img":"img/esfj.png", "mbti-friend":"ESFJ 술주정 특징", "mbti-friend-name":"\"초코에몽 먹을사람?\"<br>자발적 우유, 상쾌환 셔틀"},
-            "ENFJ":{"animal":"ENFJ – 나를 따르라, 본투비 리더", "explain":"뛰어난 언변과 비전, 센스를 겸비한 타고난 리더, 아마도 이 말을 읽고 고개를 끄덕이고 있을 당신은 인류애가 넘치는 따뜻한 사람이에요. 사람에 대한 관심과 흥미가 많아 주변에서 오지랖 좀 그만 부리라는 말도 종종 듣곤 하지만, 그만큼 다른 사람들의 성장을 돕고 헌신하는 편이에요. 답답한 팀플 회의 속, 당신이 입을 여는 그 순간부터 일이 일사천리로 척척 진행된 적이 꽤나 많았을만큼 당장 해야 할 일과 앞으로 해 나가야할 일의 분배를 잘하는 편이기도 합니다. 사람들과의 소통을 좋아하는 당신, 좋은 사람들이 모인 불씨에서 함께 좋은 추억 만들어가요! ", "img":"img/enfj.png", "mbti-friend":"ENFJ 술주정 특징", "mbti-friend-name":"수도꼭지랑 쎄뚜쎄뚜<br>우는 애들 고민 상담 전문가<br>쓸떼없이 진지함"},
+            "ENFJ":{"animal":"ENFJ – 나를 따르라, 본투비 리더", "explain":"뛰어난 언변과 비전, 센스를 겸비한 타고난 리더, 아마도 이 말을 읽고 고개를 끄덕이고 있을 당신은 인류애가 넘치는 따뜻한 사람이에요. 사람에 대한 관심과 흥미가 많아 주변에서 오지랖 좀 그만 부리라는 말도 종종 듣곤 하지만, 그만큼 다른 사람들의 성장을 돕고 헌신하는 편이에요. 답답한 팀플 회의 속, 당신이 입을 여는 그 순간부터 일이 일사천리로 척척 진행된 적이 꽤나 많았을만큼 당장 해야 할 일과 앞으로 해 나가야할 일의 분배를 잘하는 편이기도 합니다. 사람들과의 소통을 좋아하는 당신, 좋은 사람들이 모인 불씨에서 함께 좋은 추억 만들어가요! ", "img":"img/enfj.png", "mbti-friend":"ENFJ 술주정 특징", "mbti-friend-name":"우는 애들 고민 상담 전문가<br>쓸떼없이 진지함"},
             "ENTJ":{"animal":"ENTJ - 끈기? 책임감? 암튼 감사합니다.", "explain":"끈기하면 끈기, 책임감이면 책임감. 어딜 가나 공식적이든 비공식적이든 리더의 역할을 자주 맡게 되는 당신. 팀플할 때 당신은 자료조사, ppt 제작, 발표까지 전과정에 헌신적으로 참여하고 이끌어나가곤 합니다. 하지만 자기객관화 또한 확실한 편이라 못할 것 같은 일은 과감하게 포기하는 편이에요. 냉철한 두뇌를 통해 팩트로 조지는 스타일인 당신은 모임이나 단체에서 주로 이성을 담당하는 편이에요. 또한 비전이 확고하고 자존감이 높으며 남과의 비교를 잘 하지 않는 멋진 마인드를 가지고 있어요. ‘효율성’’을 추구하는 당신, 학과의 최적화를 위해 모인 불씨에서 함께 좋은 추억 만들어가요!", "img":"img/entj.png", "mbti-friend":"ENTJ 술주정 특징", "mbti-friend-name":"저번엔 인생4컷 사업하자더니 오늘은 카페차리자함<br>사업 하자 잼"}
         }
         function start(){
